--- a/ErasmusWebiste/signup_page.html
+++ b/ErasmusWebiste/signup_page.html
@@ -127,7 +127,7 @@
 <body>
     <header>
             <header>
-                <a href="index.html"><img src="images/logo.png" alt="logo" style="height: 60px; width: 90px; margin: 2px 10px;"></a>
+                <a href="index.html"><img src="images/TestLogo.png" alt="logo" style="height: 100px; width: 100px; margin: 2px 5px;"></a>
                 <a href="index.html"><button style="position: fixed;left: 100px;top: 10px;height: 45px;width: 150px;">Home</button></a>
                 <a href="search.html"><button style="position: fixed;left: 260px;top: 10px;height: 45px;width: 150px;">Search</button></a>
                 <a href="login_page.html"><button style="position: fixed;right: 20px;top: 10px;height: 45px;width: 150px;">Log in</button></a>
