--- a/ErasmusWebiste/index.html
+++ b/ErasmusWebiste/index.html
@@ -46,8 +46,8 @@
             margin-right: 5px;
             }
     </style>
-        <img style="background-color:  rgba(78, 208, 132, 0.859);position: absolute;top:1400px;width: 100%;height: 300px;left: 0%;">
-        <img style="background-color: black; position: absolute;top: 1430px;width: 96%;height: 5px;left: 2%;">
+        <img style="background-color:  rgba(78, 208, 135, 0.859);position: absolute;top:1400px;width: 100%;height: 300px;left: 0%;">
+        <img style="background-color: greenyellow; position: absolute;top: 1430px;width: 96%;height: 5px;left: 2%;">
         <p style="position: absolute;top: 1630px;left: 20%;font-size: x-large;">Frequently asked questions (FAQ)</p>  
         <p style="position: absolute;top: 1630px;left: 66.7%;font-size: x-large;">Contact us</p>  
         <p style="position: absolute;top: 1450px;left: 3.3%;width: 93%;">
