--- a/ErasmusWebiste/signup_page.html
+++ b/ErasmusWebiste/signup_page.html
@@ -30,7 +30,7 @@
 
         /* Header styling */
         header {
-            background-color: rgb(92, 231, 150);
+            background-color: rgb(100, 100, 100);
             position: fixed;
             top: 0;
             left: 0;
@@ -130,10 +130,10 @@
                 <a href="index.html"><img src="images/TestLogo.png" alt="logo" style="height: 100px; width: 100px; margin: 2px 2px;"></a>
                 <a href="index.html"><button style="position: fixed;left: 100px;top: 10px;height: 45px;width: 150px;">Home</button></a>
                 <a href="search.html"><button style="position: fixed;left: 260px;top: 10px;height: 45px;width: 150px;">Search</button></a>
-                <a href="login_page.html"><button style="position: fixed;right: 20px;top: 10px;height: 45px;width: 150px;">Log in</button></a>
+                <a href="login_page.html"><img src="images/EmptyPfp.png" alt="logo" style="height: 75px; width: 75px; position: fixed;left: 1830px;top: -3px;"></a>
                 <div class="search-bar">
-                    <input style="position: fixed;left: 600px;width: 400px;top: 13px;" type="text" id="searchInput" placeholder="Search for products...">
-                    <button style="background-color: #333;color: #fff;border: none;border-radius: 5px;padding: 10px;cursor: pointer;font-size: 16px;position: fixed;top: 13px;left: 1030px;" onclick="search()">Search</button>
+                    <input style="position: fixed;left: 1300px;width: 400px;top: 13px;" type="text" id="searchInput" placeholder="Search for products...">
+                    <button style="background-color: rgb(92, 231, 178);color: rgb(0, 0, 0);border: none;border-radius: 5px;padding: 10px;cursor: pointer;font-size: 17px;position: fixed;top: 13px;left: 1730px;" onclick="search()">Search</button>
                 </div>        
             </header>
             <div class="container">
@@ -159,7 +159,7 @@
             <label for="terms">I accept the terms & conditions.</label>
             <br><br>
             <button type="submit">Sign Up</button>
-            <button><a href="login_page.html">Log in</a></button>
+            <a href="login_page.html"> <button style="position: fixed;left: 1100px;top: 427px;height: 40px;width: 100px;">Log in</button></a>
         </form>
     </div>
 
