--- a/ErasmusWebiste/login_page.html
+++ b/ErasmusWebiste/login_page.html
@@ -106,28 +106,7 @@
             }
     </style>
 </head>
-<body>
-    <header>
-            <header>
-                <a href="index.html"><img src="images/TestLogo.png" alt="logo" style="height: 100px; width: 100px; margin: 2px 2px;"></a>
-                <a href="index.html"><button style="position: fixed;left: 100px;top: 10px;height: 45px;width: 150px;">Home</button></a>
-                <a href="search.html"><button style="position: fixed;left: 260px;top: 10px;height: 45px;width: 150px;">Search</button></a>
-                <a href="login_page.html"><button style="position: fixed;right: 20px;top: 10px;height: 45px;width: 150px;">Log in</button></a>
-                <div class="search-bar">
-                    <input style="position: fixed;left: 600px;width: 400px;top: 13px;" type="text" id="searchInput" placeholder="Search for products...">
-                    <button style="background-color: #333;color: #fff;border: none;border-radius: 5px;padding: 10px;cursor: pointer;font-size: 16px;position: fixed;top: 13px;left: 1030px;" onclick="search()">Search</button>
-                </div>        
-            </header>
-            <div class="container">
-            </div>
-        
-            <script>
-                function search() {
-                    const searchTerm = document.getElementById('searchInput').value;
-                    alert(`Searching for: ${searchTerm}`);
-                }
-            </script>
-    </header>
+<body> 
 
     <h1>Login</h1>
 
@@ -143,9 +122,10 @@
     <div class="right-box"></div>
 </body>
             <header>
-                <a href="index.html"><img src="images/TestLogo.png" alt="logo" style="height: 100px; width: 100px; margin: 2px 2px;"></a>
+                <a href="index.html"><img src="images/TestLogo.png" alt="logo" style="height: 100px; width: 100px; position: fixed;left: 2px;top: 2px;"></a>
                 <a href="index.html"><button style="position: fixed;left: 100px;top: 10px;height: 45px;width: 150px;">Home</button></a>
-                <a href="search.html"><button style="position: fixed;left: 260px;top: 10px;height: 45px;width: 150px;">Search</button></a>
+                <a href="search.html"><button style="position: fixed;left: 260px;top: 10px;height: 45px;width: 150px;">News</button></a>
+                <a href="search.html"><button style="position: fixed;left: 420px;top: 10px;height: 45px;width: 150px;">About us</button></a>
                 <a href="login_page.html"><img src="images/EmptyPfp.png" alt="logo" style="height: 75px; width: 75px; position: fixed;left: 1830px;top: -3px;"></a>
                 <div class="search-bar">
                     <input style="position: fixed;left: 1320px;width: 400px;top: 13px;" type="text" id="searchInput" placeholder="Search for products...">
