some percantage changes

--- a/ErasmusWebiste/login_page.html
+++ b/ErasmusWebiste/login_page.html
@@ -124,8 +124,8 @@
             <header>
                 <a href="index.html"><img src="images/TestLogo.png" alt="logo" style="height: 100px; width: 100px; position: fixed;left: 2px;top: 2px;"></a>
                 <a href="index.html"><button style="position: fixed;left: 100px;top: 10px;height: 45px;width: 150px;">Home</button></a>
-                <a href="search.html"><button style="position: fixed;left: 260px;top: 10px;height: 45px;width: 150px;">News</button></a>
-                <a href="search.html"><button style="position: fixed;left: 420px;top: 10px;height: 45px;width: 150px;">About us</button></a>
+                <a href="news.html"><button style="position: fixed;left: 260px;top: 10px;height: 45px;width: 150px;">News</button></a>
+                <a href="abtUs.html"><button style="position: fixed;left: 420px;top: 10px;height: 45px;width: 150px;">About us</button></a>
                 <a href="login_page.html"><img src="images/EmptyPfp.png" alt="logo" style="height: 75px; width: 75px; position: fixed;left: 1830px;top: -3px;"></a>
                 <div class="search-bar">
                     <input style="position: fixed;left: 1320px;width: 400px;top: 13px;" type="text" id="searchInput" placeholder="Search for products...">
