--- a/ErasmusWebiste/news.html
+++ b/ErasmusWebiste/news.html
@@ -48,14 +48,9 @@
 
     <img style="background-color:  rgba(78, 208, 132, 0.859); position:absolute;top:1400px;width: 100%;height: 300px;left: 0px;">
     <img style="background-color: black; position: absolute;top: 1440px;width: 96%;height: 5px;left: 30px;">
-    <p style="position: absolute;top: 1630px;left: 300px;font-size: x-large;">Frequently asked questions (FAQ)</p>  
-    <p style="position: absolute;top: 1630px;left: 66.7%;font-size: x-large;">Contact us</p>  
-    <p style="position: absolute;top: 1450px;left: 50px;width: 1400px;">Learn more about our lectors:<br>
-        1. Dr. Sandra CodeSmith: A trailblazer in artificial intelligence and machine learning, Dr. CodeSmith has a knack for demystifying complex concepts and making them accessible to learners of all levels.<br>
-        2. John WebDev Guru: With a decade of experience in web development, John is your go-to guide for mastering the intricacies of front-end and back-end technologies. His practical insights and hands-on approach will reshape your understanding of web development.<br>
-        3. Lila Data Maven: Dive into the world of data science with Lila, a data enthusiast with a proven track record in transforming raw data into meaningful insights. Join her courses to unravel the mysteries of data analysis and visualization.<br>
-        4. Ruby CodeCraftsman: Explore the beauty of the Ruby programming language with our resident CodeCraftsman. His passion for clean, elegant code will inspire you to write software that not only works but dazzles.<br>
-        These are just a few of the luminaries guiding you on your CodeCraftHub journey. Join us and learn from the best in the business – where education meets expertise, and your success is the ultimate destination</p>
+    <a href="index.html"><p style="position: absolute;top: 1630px;left: 300px;font-size: x-large;">Frequently asked questions (FAQ)</p></a>  
+    <a href="index.html"><p style="position: absolute;top: 1630px;left: 66.7%;font-size: x-large;">Contact us</p></a>    
+    <p style="position: absolute;top: 1450px;left: 50px;width: 1400px;">Paragraph at the bottom of the page</p>
 
         <p style="position: absolute;left: 75px;top: 100px;width: 950px;font-size:larger;align-items:center;font-size: larger;">Welcome to our site's dynamic and intuitive search page, where the quest for information transforms into a seamless and rewarding experience. Our search functionality is designed with user-centricity in mind, offering a powerful and intuitive tool to help you find exactly what you're looking for efficiently.</p>
         <h1 style="position: absolute;left: 80px;top: 200px;">Key Features:</h1>
@@ -84,8 +79,8 @@
             <header>
                 <a href="index.html"><img src="images/TestLogo.png" alt="logo" style="height: 100px; width: 100px; position: fixed;left: 2px;top: 2px;"></a>
                 <a href="index.html"><button style="position: fixed;left: 100px;top: 10px;height: 45px;width: 150px;">Home</button></a>
-                <a href="search.html"><button style="position: fixed;left: 260px;top: 10px;height: 45px;width: 150px;">News</button></a>
-                <a href="search.html"><button style="position: fixed;left: 420px;top: 10px;height: 45px;width: 150px;">About us</button></a>
+                <a href="news.html"><button style="position: fixed;left: 260px;top: 10px;height: 45px;width: 150px;">News</button></a>
+                <a href="abtUs.html"><button style="position: fixed;left: 420px;top: 10px;height: 45px;width: 150px;">About us</button></a>
                 <a href="login_page.html"><img src="images/EmptyPfp.png" alt="logo" style="height: 75px; width: 75px; position: fixed;left: 1830px;top: -3px;"></a>
                 <div class="search-bar">
                     <input style="position: fixed;left: 1300px;width: 400px;top: 13px;" type="text" id="searchInput" placeholder="Search for products...">
