--- a/ErasmusWebiste/index.html
+++ b/ErasmusWebiste/index.html
@@ -48,8 +48,8 @@
     </style>
         <img style="background-color:  rgba(78, 208, 135, 0.859);position: absolute;top:1400px;width: 100%;height: 300px;left: 0%;">
         <img style="background-color: greenyellow; position: absolute;top: 1430px;width: 96%;height: 5px;left: 2%;">
-        <p style="position: absolute;top: 1630px;left: 20%;font-size: x-large;">Frequently asked questions (FAQ)</p>  
-        <p style="position: absolute;top: 1630px;left: 66.7%;font-size: x-large;">Contact us</p>  
+        <a href="index.html"><p style="position: absolute;top: 1630px;left: 300px;font-size: x-large;">Frequently asked questions (FAQ)</p></a>  
+        <a href="index.html"><p style="position: absolute;top: 1630px;left: 66.7%;font-size: x-large;">Contact us</p></a>    
         <p style="position: absolute;top: 1450px;left: 3.3%;width: 93%;">
             This is a test paragraph at the bottom of the page!
         </p>
@@ -66,9 +66,9 @@
             <header>
                 <a href="index.html"><img src="images/TestLogo.png" alt="logo" style="height: 100px; width: 100px; position: fixed;left: 2px;top: 2px;"></a>
                 <a href="index.html"><button style="position: fixed;left: 100px;top: 10px;height: 45px;width: 150px;">Home</button></a>
-                <a href="search.html"><button style="position: fixed;left: 260px;top: 10px;height: 45px;width: 150px;">News</button></a>
-                <a href="search.html"><button style="position: fixed;left: 420px;top: 10px;height: 45px;width: 150px;">About us</button></a>
-                <a href="login_page.html"><img src="images/EmptyPfp.png" alt="logo" style="height: 75px; width: 75px; position: fixed;left: 1830px;top: -3px;"></a>
+                <a href="news.html"><button style="position: fixed;left: 260px;top: 10px;height: 45px;width: 150px;">News</button></a>
+                <a href="abtUs.html"><button style="position: relative;left: 22%;top: 15%;height: 45px;width: 150px;">About us</button></a>
+                <a href="login_page.html"><img src="images/EmptyPfp.png" alt="logo" style="height: 150%; width: 5%; position: relative;left: 95%;top: -100%;"></a>
                 <div class="search-bar">
                     <input style="position: fixed;left: 1300px;width: 400px;top: 13px;" type="text" id="searchInput" placeholder="Search for products...">
                     <button style="background-color: rgb(92, 231, 178);color: rgb(0, 0, 0);border: none;border-radius: 5px;padding: 10px;cursor: pointer;font-size: 17px;position: fixed;top: 13px;left: 1730px;" onclick="search()">Search</button>
