new color index

--- a/ErasmusWebiste/index.html
+++ b/ErasmusWebiste/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Erasmus Project Website</title>
+</head>
+<body>
     
         <img style="background-color:  rgba(78, 208, 135, 0.859);position: absolute;top:1400px;width: 100%;height: 300px;left: 0%;">
         <img style="background-color: greenyellow; position: absolute;top: 1430px;width: 96%;height: 5px;left: 2%;">
@@ -31,8 +33,8 @@
                     <a href="index.html">Home</a>
                     <a href="news.html">News</a>
                     <div class="dropdown">
-                        <button class="dropbtn">About Us 
-                            <i class="fa fa-caret-down"></i>
+                        <button class="dropbtn">
+                            About Us
                         </button>
                         <div class="dropdown-content">
                             <a href="abtUs.html">About Us</a>
@@ -45,7 +47,7 @@
                     </a>
                     <div class="search-bar">
                         <input style="position: fixed; left: 1300px; width: 400px; top: 13px;" type="text" id="searchInput" placeholder="Search for products...">
-                        <a href="search.html" style="border: none; border-radius: 5px; padding: 10px; cursor: pointer; font-size: 17px; position: fixed; top: 13px; left: 1730px;" onclick="search()">Search</a>
+                        <a href="search.html" style="border: none; border-radius: 5px; padding: 10px; cursor: pointer; font-size: 25px; position: fixed; top: 13px; left: 1730px;" onclick="search()">Search</a>
                     </div>
                 </div>
             </header>            
@@ -59,5 +61,5 @@
                 }   
             </script>
         </header>
-</head>
+    </body>
 </html>
