Main banner and navbar fix

--- a/ErasmusWebiste/index.html
+++ b/ErasmusWebiste/index.html
@@ -30,9 +30,9 @@
                     <img src="images/TestLogo.png" alt="logo" style="height: 100px; width: 100px; position: fixed; left: 2px; top: 2px;">
                 </a>
                 <div class="navbar">
-                    <a href="index.html">Home</a>
-                    <a href="news.html">News</a>
-                    <div class="dropdown">
+                    <a href="index.html" style="position: absolute;top: 20px;left: 100px;border-radius: 10px;">Home</a>
+                    <a href="news.html"style="position: absolute;top: 20px;left: 230px;border-radius: 10px;">News</a>
+                    <div class="dropdown"style="position: absolute;top: 20px;left: 360px;height: 500px;width: 200px;">
                         <button class="dropbtn">
                             About Us
                         </button>
@@ -42,12 +42,12 @@
                             <a href="contact.html">Contact Us</a>
                         </div>
                     </div>
-                    <a href="login_page.html" style="border-radius: 80px;padding: 0px; position: fixed; top: 13px; left: 1950px; height: 60px; width: 60px; ">
+                    <a href="login_page.html" style="border-radius: 80px;padding: 0px; position: fixed; top: 13px; left: 1850px; height: 60px; width: 60px; ">
                         <img src="images/EmptyPfp.png" alt="profile" style="height: 60px; width: 60px;">
                     </a>
                     <div class="search-bar">
-                        <input style="position: fixed; left: 1300px; width: 400px; top: 13px;" type="text" id="searchInput" placeholder="Search for products...">
-                        <a href="search.html" style="border: none; border-radius: 5px; padding: 10px; cursor: pointer; font-size: 25px; position: fixed; top: 13px; left: 1730px;" onclick="search()">Search</a>
+                        <input style="position: fixed; left: 1300px; width: 400px; top: 20px;" type="text" id="searchInput" placeholder="Search for products...">
+                        <a href="search.html" style="border: none; border-radius: 5px; padding: 10px; cursor: pointer; font-size: 25px; position: fixed; top: 20px; left: 1730px;" onclick="search()">Search</a>
                     </div>
                 </div>
             </header>            
