--- a/ErasmusWebiste/abtUs.html
+++ b/ErasmusWebiste/abtUs.html
@@ -17,16 +17,35 @@
         <p style="position: absolute;left: 70px;top: 250px;width: 66.7%;font-size:larger;">And Here</p>
 
             <header>
-                <a href="index.html"><img src="images/TestLogo.png" alt="logo" style="height: 100px; width: 100px; position: fixed;left: 2px;top: 2px;"></a>
-                <a href="index.html"><button style="position: fixed;left: 100px;top: 10px;height: 45px;width: 150px;">Home</button></a>
-                <a href="news.html"><button style="position: fixed;left: 260px;top: 10px;height: 45px;width: 150px;">News</button></a>
-                <a href="news.html"><button style="position: fixed;left: 420px;top: 10px;height: 45px;width: 150px;">About us</button></a>
-                <a href="login_page.html"><img src="images/EmptyPfp.png" alt="logo" style="height: 75px; width: 75px; position: fixed;left: 1830px;top: -3px;"></a>
-                <div class="search-bar">
-                    <input style="position: fixed;left: 1300px;width: 400px;top: 13px;" type="text" id="searchInput" placeholder="Search for products...">
-                    <button style="background-color: rgb(92, 231, 178);color: rgb(0, 0, 0);border: none;border-radius: 5px;padding: 10px;cursor: pointer;font-size: 17px;position: fixed;top: 13px;left: 1730px;" onclick="search()">Search</button>
-                </div>        
-            </header>
+            <header>
+                <a href="index.html">
+                    <img src="images/TestLogo.png" alt="logo" style="height: 100px; width: 100px; position: fixed; left: 2px; top: 2px;">
+                </a>
+                <div class="navbar">
+                    <a href="index.html" style="position:absolute;height: 30px;width: 100px;top: 20px;left: 102px;"><span>Home</span></a>
+                    <a href="news.html"style="position:absolute;height: 30px;width: 100px;top: 20px;left: 230px;"><span>News</span></a>
+                    <div class="dropdown">
+                        <button class="dropbtn"style="position:absolute;height: 60px;width: 180px;top: 20px;left: 360px;">
+                            About Us
+                        </button>
+                        <div class="dropdown-content"style="position:absolute;height: 250px;width: 180px;top: 80px;left: 360px;">
+                            <a href="abtUs.html">About Us</a>
+                            <a href="faq.html">FAQ</a>
+                            <a href="contact.html">Contact Us</a>
+                        </div>
+                    </div>
+                        <a href="login_page.html" style="border-radius: 80px;padding: 0px; position: absolute; top: 9px; left: 1850px; height: 60px; width: 60px; ">
+                        <img src="images/EmptyPfp.png" alt="profile" style="height: 60px; width: 60px;">
+                        </a>
+                    <div class="search-bar">
+                        <input style="position: fixed; left: 1250px; width: 400px; top: 13px;border-radius: 100px;font-size: 20px;" type="text" id="searchInput" placeholder="Search for products...">
+                        <a href="search.html" class="search-glass" style="border-radius: 14px; padding: 0px; position: fixed; top: 20px; left: 1630px; height: 30px; width: 30px;" onclick="search()">
+                            <img src="images/magnifying-glass.webp" style="height: 28px;width: 28px;" alt="⌕">
+                        </a>
+                        <a href="search.html" style="border: none; border-radius: 10px; padding: 10px; cursor: pointer; font-size: 25px; position: fixed; top: 13px; left: 1700px; width: 100px;" onclick="search()">Search</a>
+                    </div>
+                </div>
+            </header> 
             <div class="container">
             </div>
         
@@ -34,8 +53,10 @@
                 function search() {
                     const searchTerm = document.getElementById('searchInput').value;
                     alert(`Searching for: ${searchTerm}`);
-                }
+                    document.getElementById('searchInput').value = "";
+                }   
             </script>
+        </header>
         </body>
         
 </head>
