--- a/ErasmusWebiste/index.html
+++ b/ErasmusWebiste/index.html
@@ -1,69 +1,66 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Erasmus Project Website</title>
-</head>
-<body>
-    
-        <img style="background-color:  rgba(78, 208, 135, 0.859);position: absolute;top:1400px;width: 100%;height: 300px;left: 0%;">
-        <img style="background-color: greenyellow; position: absolute;top: 1430px;width: 96%;height: 5px;left: 2%;">
-        <a href="index.html"><p style="position: absolute;top: 1630px;left: 300px;font-size: x-large;">Frequently asked questions (FAQ)</p></a>  
-        <a href="index.html"><p style="position: absolute;top: 1630px;left: 66.7%;font-size: x-large;">Contact us</p></a>    
-        <p style="position: absolute;top: 1450px;left: 3.3%;width: 93%;">
-            This is a test paragraph at the bottom of the page!
-        </p>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>Erasmus Project Website</title>
+    </head>
+    <body>
+            <h1 style="position: absolute;top: 110px;left: 5.3%;font-size: 32px;">Welcome to CodeTypeHub - Your Gateway to Infinite Possibilities in the World of Programming!</h1>
+            <p style="position: absolute;top: 200px;width: 66.7%;font-size: 32px;">Embark on a transformative learning experience with our expansive online programming course marketplace, where passion meets proficiency. Whether you're a budding coder, an aspiring tech entrepreneur, or a seasoned developer seeking to stay ahead of the curve, our marketplace is your one-stop destination for curated, high-quality programming courses.</p>
+            <img src="images/home_image1.webp" alt="programmer" style="position: absolute;left: 70%;top: 220px;width: 450px;height: 300px;">
+            <h2 style="position: absolute;top: 500px;left: 32%;font-size: 40px">Why CodeTypeHub?</h2>
+            <p style="position: absolute;top: 560px;left: 32%;width: 66.7%;font-size: 32px;">Diverse Course Selection: Explore a vast array of courses spanning programming languages, frameworks, and cutting-edge technologies. Our marketplace offers an extensive collection catering to all skill levels and interests.Learn from industry experts and seasoned professionals who bring their real-world experience into the virtual classroom. Our instructors are committed to providing engaging and effective learning experiences.</p>
+            <img src="images/home_image2.jpg" alt="programming courses" style="position: absolute;left: 45px;top: 540px;width: 420px;height: 300px;">
 
-        <h1 style="position: absolute;top: 110px;left: 5.3%;font-size: 32px;">Welcome to CodeTypeHub - Your Gateway to Infinite Possibilities in the World of Programming!</h1>
-        <p style="position: absolute;top: 200px;width: 66.7%;font-size: 32px;">Embark on a transformative learning experience with our expansive online programming course marketplace, where passion meets proficiency. Whether you're a budding coder, an aspiring tech entrepreneur, or a seasoned developer seeking to stay ahead of the curve, our marketplace is your one-stop destination for curated, high-quality programming courses.</p>
-        <img src="images/home_image1.webp" alt="programmer" style="position: absolute;left: 70%;top: 220px;width: 450px;height: 300px;">
-        <h2 style="position: absolute;top: 500px;left: 32%;font-size: 40px">Why CodeTypeHub?</h2>
-        <p style="position: absolute;top: 560px;left: 32%;width: 66.7%;font-size: 32px;">Diverse Course Selection: Explore a vast array of courses spanning programming languages, frameworks, and cutting-edge technologies. Our marketplace offers an extensive collection catering to all skill levels and interests.Learn from industry experts and seasoned professionals who bring their real-world experience into the virtual classroom. Our instructors are committed to providing engaging and effective learning experiences.</p>
-        <img src="images/home_image2.jpg" alt="programming courses" style="position: absolute;left: 45px;top: 540px;width: 420px;height: 300px;">
-
-        <img style="background-color: rgb(92, 231, 150); position:fixed;left: 0px;top: 0px;width:100%;height:65px;">
-        <header>
             <header>
-                <a href="index.html">
-                    <img src="images/TestLogo.png" alt="logo" style="height: 100px; width: 100px; position: fixed; left: 2px; top: 2px;">
-                </a>
-                <div class="navbar">
-                    <a href="index.html" style="position:absolute;height: 30px;width: 100px;top: 20px;left: 102px;"><span>Home</span></a>
-                    <a href="news.html"style="position:absolute;height: 30px;width: 100px;top: 20px;left: 230px;"><span>News</span></a>
-                    <div class="dropdown">
-                        <button class="dropbtn"style="position:absolute;height: 60px;width: 180px;top: 20px;left: 360px;">
-                            About Us
-                        </button>
-                        <div class="dropdown-content"style="position:absolute;height: 250px;width: 180px;top: 80px;left: 360px;">
-                            <a href="abtUs.html">About Us</a>
-                            <a href="faq.html">FAQ</a>
-                            <a href="contact.html">Contact Us</a>
+                <header>
+                    <a href="index.html">
+                        <img src="images/TestLogo.png" alt="logo" style="height: 100px; width: 100px; position: fixed; left: 2px; top: 2px;">
+                    </a>
+                    <div class="navbar">
+                        <a href="index.html" style="position:absolute;height: 30px;width: 100px;top: 20px;left: 102px;"><span>Home</span></a>
+                        <a href="news.html"style="position:absolute;height: 30px;width: 100px;top: 20px;left: 230px;"><span>News</span></a>
+                        <div class="dropdown">
+                            <button class="dropbtn"style="position:absolute;height: 60px;width: 180px;top: 20px;left: 360px;">
+                                About Us
+                            </button>
+                            <div class="dropdown-content"style="position:absolute;height: 210px;width: 180px;top: 80px;left: 360px;">
+                                <a href="abtUs.html" style="height: 65px;">About Us</a>
+                                <a href="faq.html" style="height: 65px;">FAQ</a>
+                                <a href="contact.html" style="height: 80px;">Contact Us</a>
+                            </div>
+                        </div>
+                            <a href="login_page.html" style="border-radius: 80px;padding: 0px; position: absolute; top: 9px; left: 1900px; height: 60px; width: 60px; ">
+                            <img src="images/EmptyPfp.png" alt="profile" style="height: 60px; width: 60px;">
+                            </a>
+                        <div class="search-bar">
+                            <input style="position: fixed; left: 1450px; width: 400px; top: 17px;border-radius: 100px;font-size: 20px;" type="text" id="searchInput" placeholder="Search for products...">
+                            <a href="search.html" class="search-glass" style="border-radius: 14px; padding: 0px; position: fixed; top: 24px; left: 1830px; height: 30px; width: 30px;" onclick="search()">
+                                <img src="images/magnifying-glass.webp" style="height: 28px;width: 28px;" alt="⌕">
+                            </a>
                         </div>
                     </div>
-                        <a href="login_page.html" style="border-radius: 80px;padding: 0px; position: absolute; top: 9px; left: 1850px; height: 60px; width: 60px; ">
-                        <img src="images/EmptyPfp.png" alt="profile" style="height: 60px; width: 60px;">
-                        </a>
-                    <div class="search-bar">
-                        <input style="position: fixed; left: 1250px; width: 400px; top: 13px;border-radius: 100px;font-size: 20px;" type="text" id="searchInput" placeholder="Search for products...">
-                        <a href="search.html" class="search-glass" style="border-radius: 14px; padding: 0px; position: fixed; top: 20px; left: 1630px; height: 30px; width: 30px;" onclick="search()">
-                            <img src="images/magnifying-glass.webp" style="height: 28px;width: 28px;" alt="⌕">
-                        </a>
-                        <a href="search.html" style="border: none; border-radius: 10px; padding: 10px; cursor: pointer; font-size: 25px; position: fixed; top: 13px; left: 1700px; width: 100px;" onclick="search()">Search</a>
-                    </div>
+                </header> 
+                <div class="container">
                 </div>
-            </header> 
-            <div class="container">
-            </div>
+                <script>
+                    function search() {
+                        const searchTerm = document.getElementById('searchInput').value;
+                        alert(`Searching for: ${searchTerm}`);
+                        document.getElementById('searchInput').value = "";
+                    }   
+                </script>
+            </header>
+
+            <footer style="position: relative; top: 1800px;">
+                <a href="index.html"><p style="position: absolute;top: 0px;left: 1300px; font-size: x-large;">Frequently asked questions (FAQ)</p></a>  
+                <a href="index.html"><p style="position: absolute;top: 0px;left: 300px; font-size: x-large;">Contact us</p></a>    
+                <p style="position: absolute;left: 700px;top: 200px; text-align: center;">
+                    This is a test paragraph at the bottom of the page!
+                </p>
+            </footer>
         
-            <script>
-                function search() {
-                    const searchTerm = document.getElementById('searchInput').value;
-                    alert(`Searching for: ${searchTerm}`);
-                    document.getElementById('searchInput').value = "";
-                }   
-            </script>
-        </header>
-    </body>
-</html>
+        </body>
+    </html>
