--- a/ErasmusWebiste/abtUs.html
+++ b/ErasmusWebiste/abtUs.html
@@ -34,6 +34,20 @@
                             <a href="contact.html">Contact Us</a>
                         </div>
                     </div>
+                    <div class="dropdown2">
+                        <button class="dropbtn2"style="position:absolute;height: 60px;width: 180px;top: 20px;left: 540px;">
+                            Projects
+                        </button>
+                        <div class="dropdown-content2"style="position:absolute;height: 350px;width: 180px;top: 80px;left: 540px;">
+                            <a href="24.html">2024/2025</a>
+                            <a href="25.html">2025/2026</a>
+                            <a href="26.html">2026/2027</a>
+                            <a href="27.html">2027/2028</a>
+                            <a href="28.html">2028/2029</a>
+                            <a href="29.html">2029/2030</a>
+                            <a href="30.html">2030/2031</a>
+                        </div>
+                    </div>
                         <a href="login_page.html" style="border-radius: 80px;padding: 0px; position: absolute; top: 9px; left: 1850px; height: 60px; width: 60px; ">
                         <img src="images/EmptyPfp.png" alt="profile" style="height: 60px; width: 60px;">
                         </a>
