--- a/ErasmusWebiste/news.html
+++ b/ErasmusWebiste/news.html
@@ -54,11 +54,11 @@
                             <a href="contact.html">Contact Us</a>
                         </div>
                     </div>
-                    <div class="dropdown2">
-                        <button class="dropbtn2"style="position:absolute;height: 60px;width: 180px;top: 20px;left: 540px;">
+                    <div class="dropdown">
+                        <button class="dropbtn"style="position:absolute;height: 60px;width: 180px;top: 20px;left: 540px;">
                             Projects
                         </button>
-                        <div class="dropdown-content2"style="position:absolute;height: 350px;width: 180px;top: 80px;left: 540px;">
+                        <div class="dropdown-content"style="position:absolute;height: 581px;width: 180px;top: 80px;left: 540px;">
                             <a href="24.html">2024/2025</a>
                             <a href="25.html">2025/2026</a>
                             <a href="26.html">2026/2027</a>
@@ -68,15 +68,22 @@
                             <a href="30.html">2030/2031</a>
                         </div>
                     </div>
+                    <div class="dropdown">
                         <a href="login_page.html" style="border-radius: 80px;padding: 0px; position: absolute; top: 9px; left: 1850px; height: 60px; width: 60px; ">
                         <img src="images/EmptyPfp.png" alt="profile" style="height: 60px; width: 60px;">
                         </a>
+                        <div class="dropdown-content"style="position:absolute;height: 332px;width: 180px;top: 69px;left: 1705px;">
+                            <a href="login_page.html">Login</a>
+                            <a href="settings.html">Settings</a>
+                            <a href="account.html">Account</a>
+                            <a href="languages.html">Language</a>
+                        </div>
+                    </div>
                     <div class="search-bar">
                         <input style="position: fixed; left: 1250px; width: 400px; top: 13px;border-radius: 100px;font-size: 20px;" type="text" id="searchInput" placeholder="Search for products...">
                         <a href="search.html" class="search-glass" style="border-radius: 14px; padding: 0px; position: fixed; top: 20px; left: 1630px; height: 30px; width: 30px;" onclick="search()">
                             <img src="images/magnifying-glass.webp" style="height: 28px;width: 28px;" alt="⌕">
                         </a>
-                        <a href="search.html" style="border: none; border-radius: 10px; padding: 10px; cursor: pointer; font-size: 25px; position: fixed; top: 13px; left: 1700px; width: 100px;" onclick="search()">Search</a>
                     </div>
                 </div>
             </header> 
