Fixing animations and tweaking the style.css TO-DO: Make the page stay centered when outzooming

--- a/ErasmusWebiste/index.html
+++ b/ErasmusWebiste/index.html
@@ -36,17 +36,17 @@
                         <button class="dropbtn"style="position:absolute;height: 60px;width: 180px;top: 20px;left: 360px;">
                             About Us
                         </button>
-                        <div class="dropdown-content"style="position:absolute;height: 249px;width: 180px;top: 80px;left: 360px;">
+                        <div class="dropdown-content"style="position:absolute;height: 220px;width: 180px;top: 80px;left: 360px;">
                             <a href="abtUs.html">About Us</a>
                             <a href="faq.html">FAQ</a>
-                            <a href="contact.html">Contact Us</a>
+                            <a href="contact.html" style="height: 80px;">Contact Us</a>
                         </div>
                     </div>
-                    <div class="dropdown">
-                        <button class="dropbtn"style="position:absolute;height: 60px;width: 180px;top: 20px;left: 540px;">
+                    <div class="dropdown_projects">
+                        <button class="dropbtn_projects"style="position:absolute;height: 60px;width: 180px;top: 20px;left: 540px;">
                             Projects
                         </button>
-                        <div class="dropdown-content"style="position:absolute;height: 581px;width: 180px;top: 80px;left: 540px;">
+                        <div class="dropdown-content_projects"style="position:absolute; height: 384px; width: 180px;top: 80px;left: 540px;">
                             <a href="24.html">2024/2025</a>
                             <a href="25.html">2025/2026</a>
                             <a href="26.html">2026/2027</a>
@@ -57,10 +57,10 @@
                         </div>
                     </div>
                     <div class="dropdown">
-                        <a href="login_page.html" style="border-radius: 80px;padding: 0px; position: absolute; top: 9px; left: 1850px; height: 60px; width: 60px; ">
+                        <a href="profile.html" style="border-radius: 80px;padding: 0px; position: absolute; top: 9px; left: 1850px; height: 60px; width: 60px; ">
                         <img src="images/EmptyPfp.png" alt="profile" style="height: 60px; width: 60px;">
                         </a>
-                        <div class="dropdown-content"style="position:absolute;height: 332px;width: 180px;top: 69px;left: 1705px;">
+                        <div class="dropdown-content"style="position:absolute;height: 280px;width: 180px;top: 70px;left: 1715px;">
                             <a href="login_page.html">Login</a>
                             <a href="settings.html">Settings</a>
                             <a href="account.html">Account</a>
