--- a/ErasmusWebiste/login_page.html
+++ b/ErasmusWebiste/login_page.html
@@ -41,11 +41,11 @@
                             <a href="contact.html">Contact Us</a>
                         </div>
                     </div>
-                    <div class="dropdown">
-                        <button class="dropbtn"style="position:absolute;height: 60px;width: 180px;top: 20px;left: 540px;">
+                    <div class="dropdown_projects">
+                        <button class="dropbtn_projects"style="position:absolute;height: 60px;width: 180px;top: 20px;left: 540px;">
                             Projects
                         </button>
-                        <div class="dropdown-content"style="position:absolute;height: 581px;width: 180px;top: 80px;left: 540px;">
+                        <div class="dropdown-content_projects"style="position:absolute; height: 384px; width: 180px;top: 80px;left: 540px;">
                             <a href="24.html">2024/2025</a>
                             <a href="25.html">2025/2026</a>
                             <a href="26.html">2026/2027</a>
