--- a/ErasmusWebiste/index.html
+++ b/ErasmusWebiste/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     
-        <img style="background-color:  rgba(78, 208, 135, 0.859);position: absolute;top:1400px;width: 100%;height: 300px;left: 0%;">
-        <img style="background-color: greenyellow; position: absolute;top: 1430px;width: 96%;height: 5px;left: 2%;">
-        <a href="index.html"><p style="position: absolute;top: 1630px;left: 300px;font-size: x-large;">Frequently asked questions (FAQ)</p></a>  
-        <a href="index.html"><p style="position: absolute;top: 1630px;left: 66.7%;font-size: x-large;">Contact us</p></a>    
+        <img style="background-color:  rgb(100, 100, 100); position: absolute;top:1400px;width: 100%;height: 300px;left: 0%;">
+        <img style="background-color: black; position: absolute;top: 1430px;width: 96%;height: 5px;left: 2%;">
+        <a href="index.html"><p style="position: absolute;top: 1630px;left: 300px;font-size: x-large; color: black;">Frequently asked questions (FAQ)</p></a>  
+        <a href="index.html"><p style="position: absolute;top: 1630px;left: 66.7%;font-size: x-large;color: black; ">Contact us</p></a>    
         <p style="position: absolute;top: 1450px;left: 3.3%;width: 93%;">
             This is a test paragraph at the bottom of the page!
         </p>
