--- a/ErasmusWebiste/login_page.html
+++ b/ErasmusWebiste/login_page.html
@@ -7,17 +7,17 @@
     <title>Document</title>
 </head>
 <body> 
-
-    <h1>Login</h1>
+    </br>
+    <h1 style="user-select: none;">Login</h1>
 
     <div class="signup-box">
         <form style="position: relative;">
-            <input type="text" placeholder="Username" style="position: inherit; left: 5px; top: 10px; width: 400px; height: 30px; font-size: 23px; border-radius: 40px; border-style:double; border-color: rgb(180, 180, 180); border-width: 7px;" required>
-            <input type="password" placeholder="Password" style="position: inherit; left: 5px; top: 25px; width: 380px; height: 26px; font-size: 20px; border-radius: 30px; border-style:outset; border-color: rgb(180, 180, 180); border-width: 5px;" required>
-            <button type="submit" style="position: inherit; left: 10px; top: 80px; width: 140px; height: 50px; font-size: 25px; border-width: 5px;border-color: rgb(0, 219, 219);  border-style: outset ;" >Log In</button>
-            <input type="checkbox" id="remember_creds" style="position: inherit; left: -145px; top: 30px;">
-            <label for="terms" style="position: inherit; left: -150px; top: 30px; height: 25px; font-size: 20px;">Remember my Credentials.</label>
-            <button style="position: inherit; margin-top: 15px; left: 350px; top: 20px; width: 143px; height: 57px; font-size: 22px;  border-width: 5px;border-color: rgb(128, 128, 128);  border-style: outset"><a href="signup_page.html" style="color: rgb(219, 219, 219);">Create an account</a></button>
+            <input type="text" placeholder="Username" style="position: inherit; left: 5px; top: 10px; width: 400px; height: 30px; font-size: 23px; border-radius: 40px; border-style:double; border-color: rgb(180, 180, 180); border-width: 5px;" required>
+            <input type="password" placeholder="Password" style="position: inherit; left: 5px; top: 25px; width: 380px; height: 26px; font-size: 20px; border-radius: 30px; border-style:outset; border-color: rgb(180, 180, 180); border-width: 4px;" required>
+            <button type="submit" style="position: inherit; left: 10px; top: 230px; width: 140px; height: 50px; font-size: 25px; border-width: 5px;border-color: rgb(255, 71, 71);  border-style: outset;"><a style="position: relative; top: -3px;">Log In</a></button>
+            <input type="checkbox" id="remember_creds" style="position: inherit; left: -145px; top: 20px;">
+            <label for="remember_creds" style="position: inherit; left: -150px; top: 20px; height: 25px; font-size: 20px; user-select: none;">Remember my Credentials.</label>
+            <button style="position: inherit; left: 350px; top: 175px; width: 143px; height: 58px; background-color: rgb(145, 145, 145);  font-size: 22px;  border-width: 5px;border-color: rgb(166, 166, 166);  border-style: outset"><a href="signup_page.html" style="position: relative; top: -1px;">Create an account</a></button>
         </form>
     </div>
 
@@ -35,10 +35,10 @@
                         <button class="dropbtn"style="position:absolute;height: 60px;width: 180px;top: 20px;left: 360px;">
                             About Us
                         </button>
-                        <div class="dropdown-content"style="position:absolute;height: 250px;width: 180px;top: 80px;left: 360px;">
+                        <div class="dropdown-content"style="position:absolute;height: 220px;width: 180px;top: 80px;left: 360px;">
                             <a href="abtUs.html">About Us</a>
                             <a href="faq.html">FAQ</a>
-                            <a href="contact.html">Contact Us</a>
+                            <a href="contact.html" style="height: 80px;">Contact Us</a>
                         </div>
                     </div>
                     <div class="dropdown_projects">
@@ -56,10 +56,10 @@
                         </div>
                     </div>
                     <div class="dropdown">
-                        <a href="login_page.html" style="border-radius: 80px;padding: 0px; position: absolute; top: 9px; left: 1850px; height: 60px; width: 60px; ">
+                        <a href="profile.html" style="border-radius: 80px;padding: 0px; position: absolute; top: 9px; left: 1850px; height: 60px; width: 60px; ">
                         <img src="images/EmptyPfp.png" alt="profile" style="height: 60px; width: 60px;">
                         </a>
-                        <div class="dropdown-content"style="position:absolute;height: 332px;width: 180px;top: 69px;left: 1705px;">
+                        <div class="dropdown-content"style="position:absolute;height: 280px;width: 180px;top: 70px;left: 1715px;">
                             <a href="login_page.html">Login</a>
                             <a href="settings.html">Settings</a>
                             <a href="account.html">Account</a>
