--- a/ErasmusWebiste/abtUs.html
+++ b/ErasmusWebiste/abtUs.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 
-    <img style="background-color:  rgba(78, 208, 132, 0.859); position:absolute;top:1400px;width: 100%;height: 300px;left: 0px;">
+    <img style="background-color:  rgba(138, 72, 52, 0.541); position:absolute;top:1400px;width: 100%;height: 300px;left: 0px;">
     <img style="background-color: black; position: absolute;top: 1440px;width: 96%;height: 5px;left: 30px;">
     <a href="index.html"><p style="position: absolute;top: 1630px;left: 300px;font-size: x-large;">Frequently asked questions (FAQ)</p></a>  
     <a href="index.html"><p style="position: absolute;top: 1630px;left: 66.7%;font-size: x-large;">Contact us</p></a>  
@@ -19,7 +19,7 @@
             <header>
             <header>
                 <a href="index.html">
-                    <img src="images/TestLogo.png" alt="logo" style="height: 100px; width: 100px; position: fixed; left: 2px; top: 2px;">
+                    <img src="images/finalLogo.png" alt="logo" style="height: 100px; width: 100px; position: fixed; left: 2px; top: 2px;">
                 </a>
                 <div class="navbar">
                     <a href="index.html" style="position:absolute;height: 30px;width: 100px;top: 20px;left: 102px;"><span>Home</span></a>
