--- a/ErasmusWebiste/contact.html
+++ b/ErasmusWebiste/contact.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="dropdown_projects">
                         <button class="dropbtn_projects"style="position:absolute;height: 60px;width: 180px;top: 20px;left: 540px;">
-                            Projects
+                            School year
                         </button>
                         <div class="dropdown-content_projects"style="position:absolute; height: 384px; width: 180px;top: 80px;left: 540px;">
                             <a href="24.html">2024/2025</a>
