some positioning fixes on the index.html

--- a/ErasmusWebiste/index.html
+++ b/ErasmusWebiste/index.html
@@ -17,7 +17,7 @@
         </p>
     </footer>
 
-        <div style="width: 600px;padding: 20px;background-color: #f0f0f0;border-radius: 15px;box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); box-sizing: border-box;">
+        <div style="width: 600px;padding: 20px;background-color: #f0f0f0;border-radius: 15px;box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);box-sizing: border-box;">
             <h1 style="position: absolute;top: 110px;left: 5.3%;font-size: 32px;">Welcome to CodeTypeHub - Your Gateway to Infinite Possibilities in the World of Programming!</h1>
             <p style="position: absolute;top: 200px;width: 66.7%;font-size: 32px;">Embark on a transformative learning experience with our expansive online programming course marketplace, where passion meets proficiency. Whether you're a budding coder, an aspiring tech entrepreneur, or a seasoned developer seeking to stay ahead of the curve, our marketplace is your one-stop destination for curated, high-quality programming courses.</p>
             <img src="images/home_image1.webp" alt="programmer" style="position: absolute;left: 70%;top: 220px;width: 450px;height: 300px;">
@@ -33,23 +33,23 @@
                 <a href="index.html">
                 </a>
                 <div class="navbar">
-                    <a href="index.html" style="position:absolute ;height: 30px;width: 100px;top: 20px;left: 102px;"><span>Home</span></a>
-                    <a href="news.html"style="position:absolute ;height: 30px;width: 100px;top: 20px;left: 230px;"><span>News</span></a>                     
+                    <a href="index.html" style="position:absolute ;height: 30px;width: 100px;top: 23px;left: 102px;"><span>Home</span></a>
+                    <a href="news.html"style="position:absolute ;height: 30px;width: 100px;top: 23px;left: 236px;"><span>News</span></a>                     
                     <div class="dropdown">
-                        <button class="dropbtn"style="position:absolute; height:60px; width:180px; top:20px; left: 360px;">
+                        <button class="dropbtn"style="position:absolute; height:60px; width:180px; top:23px; left: 380px;">
                             About Us
                         </button>
-                        <div class="dropdown-content"style="position:absolute; height:220px; width:200px; top: 80px;left: 360px;">
+                        <div class="dropdown-content"style="position:absolute; height:220px; width:200px; top: 83px;left: 370px;">
                             <a href="abtUs.html">About Us</a>
                             <a href="faq.html">FAQ</a>
                             <a href="contact.html" style="height: 80px;">Contact Us</a>
                         </div>
                     </div>
                     <div class="dropdown_projects">
-                        <button class="dropbtn_projects"style="position:absolute ;height: 60px;width: 180px;top: 20px;left: 540px;">
-                            School year
+                        <button class="dropbtn_projects"style="position:absolute ;height: 60px;width: 180px;top: 23px;left: 560px;">
+                            Projects
                         </button>
-                        <div class="dropdown-content_projects"style="position:absolute; height: 384px; width: 180px;top: 80px;left: 540px;">
+                        <div class="dropdown-content_projects"style="position:absolute; height: 384px; width: 180px;top: 83px;left: 550px;">
                             <a href="24.html">2024/2025</a>
                             <a href="25.html">2025/2026</a>
                             <a href="26.html">2026/2027</a>
@@ -89,5 +89,3 @@
         </div>
     </body>
 </html>
-
-//hbdskhfgdhsgfjhgsdjfh
